# -langgraph-SQL-

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
app/agent/: __init__.py  context.py  graph.py  llm.py  state.py
app/agent/nodes/: __init__.py  add_extra_context.py  check_retry.py  correct_sql.py  extract_keywords.py  filter_metric.py  filter_table.py  generate_sql.py  (+6 more)
app/api/: __init__.py  dependencies.py  lifespan.py
app/clients/: embedding_client_manager.py  es_client_manager.py  mysql_client_manager.py  qdrant_client_manager.py
app/conf/: app_config.py  meta_config.py
app/core/: context.py  log.py
app/entities/: column_info.py  column_metric.py  metric_info.py  table_info.py  value_info.py
app/models/: base.py  column_info.py  column_metric.py  metric_info.py  table_info.py
app/prompt/: __init__.py  prompt_loader.py
app/scripts/: build_meta_knowledge.py
app/services/: meta_knowledge_service.py  query_service.py
conf/: app_config.yaml  jieba_ecommerce_dict.txt
docker/: docker-compose.yaml
docker/mysql/: dw.sql  meta.sql
examples/: qdrant_quickstart_demo.py
frontend/: .env.example  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
prompts/: correct_sql.prompt  extend_keywords_for_column_recall.prompt  extend_keywords_for_value_recall.prompt  filter_table_info.prompt  generate_sql.prompt
(+21 files in other folders)
