[project]
name = "shopkeeper-agent"
version = "0.1.0"
description = "LangGraph-based multi-stage NL2SQL agent with hybrid retrieval, SQL validation-correction loop, and SSE streaming"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncmy>=0.2.11",
    "cryptography>=46.0.7",
    "elasticsearch[async]>=8,<9",
    "fastapi[standard]>=0.135.3",
    "greenlet>=3.4.0",
    "huggingface-hub>=1.10.1",
    "jieba>=0.42.1",
    "langchain>=1.2.15",
    "langchain-deepseek>=1.0.1",
    "langchain-huggingface>=1.2.1",
    "langgraph>=1.1.6",
    "loguru>=0.7.3",
    "omegaconf>=2.3.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.17.1",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
